--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express-params": "0.0.3",
     "jade": "0.28.x",
     "marked": "0",
-    "strftime": "0"
+    "strftime": "0",
+    "highlight": "0"
   },
   "devDependencies": {}
 }
