--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "jade": "0.28.x",
     "marked": "0",
     "strftime": "0",
-    "highlight": "0"
+    "highlight.js": "0"
   },
   "devDependencies": {}
 }
