--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jade": "0.28.x",
     "marked": "0",
     "strftime": "0",
-    "highlight.js": "7.3.0"
+    "highlight.js": "7.3.0",
+    "mime": "1.2.9"
   },
   "devDependencies": {}
 }
