--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "component-middleware": "^1.0.0",
     "debug": "0.7.x",
     "express": "3.x",
     "express-params": "0.0.3",
-    "jade": "0.28.x",
-    "marked": "0",
-    "strftime": "0",
     "highlight.js": "7.3.0",
+    "jade": "0.28.x",
+    "markdown-walker": "~0.1.0",
+    "marked": "0",
     "mime": "1.2.9",
-    "markdown-walker": "~0.1.0"
+    "strftime": "0"
   },
   "devDependencies": {}
 }
