--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
   },
   "dependencies": {
     "component-middleware": "^1.0.0",
-    "debug": "0.7.x",
-    "express": "3.x",
+    "debug": "^3.1.0",
+    "express": "^4.16.3",
     "express-params": "0.0.3",
     "highlight.js": "7.3.0",
+    "https-proxy-agent": "^2.2.1",
     "jade": "0.28.x",
     "markdown-walker": "~0.1.0",
-    "marked": "0",
-    "mime": "1.2.9",
+    "marked": "~> 0.3.9",
+    "mime": "^2.3.1",
     "strftime": "0"
   },
   "devDependencies": {}
