--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "url": "git://github.com/yyolk/omelette.git"
   },
   "engines": {
-    "node": ">= 0.10.x",
-    "npm": "1.2.x"
+    "node": "^4",
+    "npm": "^6"
   },
   "scripts": {
     "start": "node server.js"
